# SessionSentinel

./: .env.example  .gitignore  README.md  automation_runner.py  check_admin_user.py  config.py  credential_store.py  db_tools.py  fernet_key.py  flask_app.py  generate_password_hash.py  hash_key.py  local.db-info  local.db-shm  local.db-wal  main.py  manage_users.py  migration_complete_schema.sql  push.bat  push_changes.bat  pyproject.toml  requirements.txt  test_db_connection.py  test_schema.py  test_turso_connection.py  test_turso_standalone.py  testhash.py
.github/workflows/: ci.yml
helpers/: data_processing.py  dialogs.py  login.py  logout.py  navigation.py  pagination.py
routes/: __init__.py  reports_account_routes.py
scripts/: backfill_pricing_currency.py
services/: account_export.py  account_matching.py
static/css/: dashboard.css  index.css  profile.css  reports.css  shared.css
static/js/: dashboard.js
templates/: _footer.html  _nav.html  admin_audit.html  admin_session_log.html  admin_users.html  index.html  login.html  password_required.html  profile.html  reports.html  setup_admin.html
test/: test_exports.py
utils/: __init__.py  logger.py  screenshot.py
