[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sessionsentinel"
version = "1.0.0"
description = "SessionSentinel Flask application"
requires-python = ">=3.10"

[project.scripts]
app = "flask_app:app"

[tool.setuptools]
py-modules = [
	"flask_app",
	"automation_runner",
	"config",
	"credential_store",
	"db_tools",
	"manage_users",
	"main",
]
packages = ["helpers", "routes", "services", "utils"]