[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sessionsentinel"
version = "1.0.0"
description = "SessionSentinel Flask application"
requires-python = ">=3.12,<3.13"
dependencies = [
	"Flask==3.1.3",
    "Flask-Login==0.6.3",
    "Werkzeug==3.1.7",
    "selenium==4.35.0",
    "pandas==2.2.3",
    "fpdf2==2.8.7",
    "python-docx==1.2.0",
    "openpyxl==3.1.5",
    "requests==2.32.5",
    "cryptography==46.0.5",
    "python-dotenv==1.2.2",
    "libsql==0.1.11",
]

[project.scripts]
app = "flask_app:app"

[tool.setuptools]
py-modules = [
	"flask_app",
	"automation_runner",
	"config",
	"credential_store",
	"db_tools",
	"manage_users",
	"main",
]
packages = ["helpers", "routes", "services", "utils"]